--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^7.2.10",
     "expo": "^52.0.46",
     "expo-constants": "~17.0.8",
+    "expo-linear-gradient": "^14.1.4",
     "expo-linking": "~7.0.5",
     "expo-status-bar": "~2.0.1",
     "nativewind": "^4.1.23",
