--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.2.10",
     "expo": "^52.0.46",
+    "expo-checkbox": "^4.1.4",
     "expo-constants": "~17.0.8",
     "expo-linear-gradient": "^14.1.4",
     "expo-linking": "~7.0.5",
     "expo-status-bar": "~2.0.1",
+    "express": "^5.1.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.9",
@@ -29,7 +31,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "tailwindcss": "^3.4.17"
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.15.3",
+    "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
+    "@types/react": "~18.3.12"
   },
   "private": true
 }
