--- a/package.json
+++ b/package.json
@@ -12,31 +12,25 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.2.10",
-    "expo": "^52.0.46",
+    "expo": "^53.0.6",
     "expo-checkbox": "^4.1.4",
-    "expo-constants": "~17.0.8",
+    "expo-constants": "~17.1.5",
     "expo-linear-gradient": "^14.1.4",
-    "expo-linking": "~7.0.5",
-    "expo-status-bar": "~2.0.1",
-    "express": "^5.1.0",
+    "expo-linking": "~7.1.4",
+    "expo-status-bar": "~2.2.3",
     "nativewind": "^4.1.23",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react": "^19.0.0",
+    "react-native": "^0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-svg": "^15.11.2",
     "use-latest-callback": "^0.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.15.3",
-    "tailwindcss": "^3.4.17",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
-    "@types/react": "~18.3.12"
+    "tailwindcss": "^3.4.17"
   },
   "private": true
 }
