--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "^53.0.6",
     "expo-checkbox": "^4.1.4",
     "expo-constants": "~17.1.5",
+    "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.4",
     "expo-linking": "~7.1.4",
     "expo-status-bar": "~2.2.3",
